@@ -26,7 +26,8 @@ for my $status (0, 2, 255) {
 
 
 pipe my($in), my($out);
-$SIG{USR1} = sub { print $out $_[0] };
+$SIG{USR1} = sub { syswrite $out, "$_[0]" };
+my $outfd = fileno $out;
 
 my $pid = fork;
 die if not defined $pid;
@@ -36,8 +37,12 @@ if ($pid) {
 	$pidfd->send(SIGUSR1);
 	read $in, my $buffer, 4 or die;
 	is($buffer, 'USR1');
+	my $out_clone = $pidfd->get_handle($outfd);
 	alarm 2;
 	is($pidfd->wait, 42, 'Pid returns 42');
+	syswrite $out_clone, 'Bar' or die;
+	read $in, $buffer, 3 or die;
+	is($buffer, "Bar");
 }
 else {
 	sleep 1;
