@@ -2,6 +2,7 @@ Revision history for Linux-FD-Pid
 
 {{$NEXT}}
           * Add wait method
+          * Add get_handle method
 
 0.001     2019-11-01 23:18:34+01:00 Europe/Amsterdam
           Initial release to an unsuspecting world
